build/log/idf_py_stderr_output_201271
/home/vinibit/Projetos/Highboy-main/components/Applications/ir_menu/ir_menu.c: In function 'samsung_power':
/home/vinibit/Projetos/Highboy-main/components/Applications/ir_menu/ir_menu.c:40:34: error: implicit declaration of function 'ir_send_nec_raw' [-Werror=implicit-function-declaration]
   40 | void samsung_power(void)       { ir_send_nec_raw(0xE0E0, 0x40); }
      |                                  ^~~~~~~~~~~~~~~
/home/vinibit/Projetos/Highboy-main/components/Applications/ir_menu/ir_menu.c: In function 'sony_power':
/home/vinibit/Projetos/Highboy-main/components/Applications/ir_menu/ir_menu.c:103:31: error: implicit declaration of function 'ir_send_sony' [-Werror=implicit-function-declaration]
  103 | void sony_power(void)       { ir_send_sony(0xA90, 12); } // Power
      |                               ^~~~~~~~~~~~
cc1: some warnings being treated as errors
make[3]: *** [esp-idf/Applications/CMakeFiles/__idf_Applications.dir/build.make:160: esp-idf/Applications/CMakeFiles/__idf_Applications.dir/ir_menu/ir_menu.c.obj] Erro 1
make[2]: *** [CMakeFiles/Makefile2:4820: esp-idf/Applications/CMakeFiles/__idf_Applications.dir/all] Erro 2
make[1]: *** [CMakeFiles/Makefile2:1972: CMakeFiles/flash.dir/rule] Erro 2
make: *** [Makefile:273: flash] Erro 2
